--- a/Interface/Frontend/index.html
+++ b/Interface/Frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test update</title>
-    <script src="Frontendtest.js"></script>
+    <script src="ReceiveData.js"></script>
     <style>
         h1 {
             color: #2e5426;
