Added test button, for sending data from frontend to backend

--- a/Interface/Frontend/index.html
+++ b/Interface/Frontend/index.html
@@ -8,21 +8,26 @@
     <style>
         h1 {
             color: #2e5426;
-            text-align: center;
         }
-        h2 {
-            color: #2e5426;
-            text-align: center;
+        div {
+            color: black;
+        }
+        button {
+            color: white;
+            background-color: #2e5426;
+            cursor: pointer;
         }
         body {
             background-color: white;
         }       
-        
+
     </style>
 </head>
+
 <body>
     <h1>Status:</h1>
-    <h2 id="output"></h2>
+    <div id="output"></div>
+    <button onclick="sendButtonClick()">test</button>
 </body>
 </html>
 
