--- a/Interface/Frontend/Client/Client2/index.html
+++ b/Interface/Frontend/Client/Client2/index.html
@@ -38,9 +38,9 @@
     <h3>Output:</h3>
     <div id="output"></div>
     <h3>Input1:</h3>
-    <button onclick="sendButtonClick('data1 from client 2')">test1</button>
+    <button onclick="sendButtonClick('Data1 from client 2')">test1</button>
     <h3>Input2:</h3>
-    <button onclick="sendButtonClick('data2 from client 2')">test2</button>
+    <button onclick="sendButtonClick('Data2 from client 2')">test2</button>
 
 
     <h3>Status:</h3>
