--- a/Interface/Frontend/Client/all.html
+++ b/Interface/Frontend/Client/all.html
@@ -28,9 +28,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to the Interface Calibration Test</h1>
-        <a href="Client1/index.html" class="button">Go to Client 1</a>
-        <a href="Client2/index.html" class="button">Go to Client 2</a>
+        <a href="Client1/index.html" class="button">Connect Client 1</a>
+        <a href="Client2/index.html" class="button">Connect Client 2</a>
     </div>
 </body>
 </html>
