--- a/Interface/Frontend/Client/all.html
+++ b/Interface/Frontend/Client/all.html
@@ -24,12 +24,17 @@
         .button:hover {
             background-color: #0056b3;
         }
+        .h2 {
+            color: #2e5426;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <a href="Client1/index.html" class="button">Connect Client 1</a>
-        <a href="Client2/index.html" class="button">Connect Client 2</a>
+        <h2>Connect with:</h2>
+        <a href="Client1/index.html" class="button">Client 1</a>
+        <a href="Client2/index.html" class="button">Client 2</a>
+        <a href="Client3/index.html" class="button">Client 3</a>
     </div>
 </body>
 </html>
