--- a/Interface/Frontend/Client/Client2/index.html
+++ b/Interface/Frontend/Client/Client2/index.html
@@ -23,12 +23,12 @@
         }
         body {
             background-color: white;
-        }       
+        }
         .button {
             color: white;
             background-color: #2e5426;
             cursor: pointer;
-        } 
+        }       
 
     </style>
 </head>
@@ -37,15 +37,18 @@
     <h1>Client 2</h1>
     <h3>Output:</h3>
     <div id="output"></div>
-    <h3>Input1:</h3>
-    <button onclick="sendButtonClick('Test123')">test1</button>
-    <h3>Input2:</h3>
-    <button onclick="sendButtonClick('Test1234')">test2</button>
-
-
+    <h3>Message to backend client:</h3>
+    <input type="text" id="message" name="message"><br><br>
+    <button onclick="sendMessageButtonb(document.getElementById('message').value)">Send Message</button>
+    <h3>Message to frontend client:</h3>
+    <input type="text" id="message1" name="message1"><br><br>
+    <button onclick="sendMessageButtonf(document.getElementById('message1').value)">Send Message</button>
     <h3>Status:</h3>
     <div id="status"></div>
-    
+
+    <button onclick="sendButtonClick('B_end_start_calibration')">Start calibration</button>
+    <button onclick="sendButtonClick('B_end_stop_calibration')">Stop calibration</button>
+    <button onclick="sendButtonClick('B_end_pause_calibration')">Pause calibration</button>
 </body>
 </html>
 
