--- a/Interface/Frontend/Client/Client1/index.html
+++ b/Interface/Frontend/Client/Client1/index.html
@@ -52,20 +52,28 @@
                         </div>
                     </div>
                 </div>
+                
             </div>
         </div>
 
         <div class="card">
             <div class="card-body text-center">
-                <button class="btn custom-btn m-2" onclick="sendMessageToServer('B_end_start_calibration',false)">Start Calibration</button>
-                <button class="btn custom-btn m-2" onclick="sendMessageToServer('B_end_stop_calibration')">Stop Calibration</button>
-                <button class="btn custom-btn m-2" onclick="sendMessageToServer('B_end_pause_calibration')">Pause Calibration</button>
-                <button class="btn custom-btn m-2" onclick="sendMessageToServer('B_end_send_images')">Receive combined image</button>
-        
-
+                <label for="machine_config">Choose a machine config:</label>
+                <select name="machine_config" id="machine_config">
+                    <option value="" disabled selected>Select a config</option>
+                    <option value="90">90 mm</option>
+                    <option value="63">63 mm</option>
+                </select> 
+                <h6>Main ip-address:</h6>
+                <input type="text" id="main_ip" name="main_ip" placeholder="Enter main ip">
+                <h6>Number of machines:</h6>
+                <input type="text" id="number_of_pcs" name="number_of_pcs" placeholder="Enter number of machines">
+                <h1></h1>
+                <button class="btn custom-btn m-2" onclick="startCalibration()">Start Calibration</button>
             </div>
-        </div>
     </div>
+
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
