--- a/Interface/Frontend/Client/Client1/index.html
+++ b/Interface/Frontend/Client/Client1/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -58,6 +60,7 @@
 
         <div class="card">
             <div class="card-body text-center">
+                <h2>Calibration</h2>
                 <label for="machine_config">Choose a machine config:</label>
                 <select name="machine_config" id="machine_config">
                     <option value="" disabled selected>Select a config</option>
